--- a/Codigo/frontend/src/locales/es/common.json
+++ b/Codigo/frontend/src/locales/es/common.json
@@ -11,5 +11,7 @@
     "cancel": "Cancelar",
     "error_generic": "Algo salió mal. Intenta nuevamente.",
     "save": "Guardar",
-    "search": "Buscar"
+    "search": "Buscar",
+    "english": "Inglés",
+    "spanish": "Español"
   }
