soporte multilenguaje en paneles admin y editor

--- a/Codigo/frontend/src/locales/en/navbar.json
+++ b/Codigo/frontend/src/locales/en/navbar.json
@@ -1,5 +1,10 @@
 {
     "home": "Home",
     "boletines": "Bulletin",
-    "profile": "My profile"
+    "profile": "My profile",
+    "admin-panel": "Administration Panel",
+    "editor-panel": "Editor Panel",
+    "viewer": "Viewer",
+    "editor": "Editor",
+    "admin": "Admin"
 }
